# GScript.GRClib

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
examples/: python_example.py
include/: IEnums.h  grclib.h
src/: IEnums.h  grclib.cpp  protocol.cpp
